--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@tsconfig/svelte": "^3.0.0",
     "svelte": "^3.54.0",
+    "svelte-awesome-color-picker": "^2.2.1",
     "svelte-check": "^2.10.0",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4"
   }
 }
